# src/main/java/pl/terra/cloud_iot/domain/DeviceService.java
@@ -3,16 +3,74 @@ package pl.terra.cloud_iot.domain;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Component;
+import pl.terra.cloud_iot.jpa.entity.DeviceEntity;
+import pl.terra.cloud_iot.jpa.entity.enums.DeviceStatus;
+import pl.terra.cloud_iot.jpa.repository.DeviceRepository;
 import pl.terra.cloud_iot.mqtt.ServiceMqttDriver;
+import pl.terra.common.exception.NotFoundException;
+import pl.terra.common.exception.SystemException;
+import pl.terra.common.mqtt.DeviceMqtt;
+import pl.terra.http.model.Connection;
+
+import java.time.LocalDate;
+import java.util.Date;
 
 @Component
 public class DeviceService {
     private static final Logger logger = LogManager.getLogger(DeviceService.class);
     private final ServiceMqttDriver serviceMqttDriver;
+    private final DeviceRepository deviceRepository;
 
-    public DeviceService(ServiceMqttDriver serviceMqttDriver) {
+    public DeviceService(ServiceMqttDriver serviceMqttDriver, DeviceRepository deviceRepository) {
         this.serviceMqttDriver = serviceMqttDriver;
+        this.deviceRepository = deviceRepository;
     }
 
+    private String getToDeviceTopic(final String deviceCode) {
+        return String.format("/tai/device/%s", deviceCode);
+    }
 
+    private String getToServiceTopic(final String deviceCode) {
+        return String.format("/tai/service/%s", deviceCode);
+    }
+
+    public void addToPool(final Long userId, final String deviceCode) throws SystemException {
+        DeviceService.logger.debug(String.format("Adding device to pool list with userId: %d and device code: '%s'", userId, deviceCode));
+
+        final DeviceEntity entity = new DeviceEntity();
+        entity.setUserId(userId);
+        entity.setFactoryCode(deviceCode);
+        entity.setCreatedAt(LocalDate.now());
+        entity.setStatus(DeviceStatus.PENDING);
+        entity.setToServiceTopic(getToServiceTopic(deviceCode));
+        entity.setToDeviceTopic(getToDeviceTopic(deviceCode));
+        deviceRepository.save(entity);
+
+        final DeviceMqtt deviceMqtt = new DeviceMqtt();
+        deviceMqtt.setToServiceTopic(entity.getToServiceTopic());
+        deviceMqtt.setToDeviceTopic(entity.getToDeviceTopic());
+        serviceMqttDriver.registerDevice(deviceMqtt);
+    }
+
+    public Connection getConnection(final String deviceCode) throws NotFoundException {
+        DeviceService.logger.debug(String.format("getting device connection for device code: '%s'", deviceCode));
+
+        final DeviceEntity device = deviceRepository.findByFactoryCode(deviceCode).orElse(null);
+        if(device == null) {
+            throw new NotFoundException(String.format("can't find device with device code: %s", deviceCode));
+        }
+
+        final Connection connection = new Connection();
+        connection.toDeviceTopic(device.getToDeviceTopic());
+        connection.toServiceTopic(device.getToServiceTopic());
+
+        return connection;
+    }
+
+    public void setStatusReady(final DeviceEntity device) {
+        DeviceService.logger.debug(String.format("Authorizing device: '%s'", device));
+
+        device.setStatus(DeviceStatus.READY);
+        deviceRepository.save(device);
+    }
 }
